(fix): fixes token issuer
